--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <article id="skills" class="web-dev">
           <h3 class="web-devh3">Web <span>Developer</span></h3>
           <img
-            src="assets/image/vscode-screen.jpg"
+            src="assets/images/vscode-screen.jpg"
             alt="web-dev"
             class="card-img"
           />
@@ -66,7 +66,7 @@
         <article id="skills" class="web-dev">
           <h3 class="web-devh3">Video <span>Editor</span></h3>
           <img
-            src="assets/image/premiere-pro.jpg"
+            src="assets/images/premiere-pro.jpg"
             alt="video-editor"
             class="card-img"
           />
@@ -85,7 +85,7 @@
         <article id="skills" class="web-dev">
           <h3 class="web-devh3">3D <span>Modeller</span></h3>
           <img
-            src="assets/image/blender-screen.png"
+            src="assets/images/blender-screen.png"
             alt="3d-modeller"
             class="card-img"
           />
@@ -104,7 +104,7 @@
 
       <aside id="contact">
         <h2 class="mycontact">Hire<span>Me!</span></h2>
-        <img src="assets/image/rizz-img.jpg" alt="rizz-img" class="rizz-img" />
+        <img src="assets/images/rizz-img.jpg" alt="rizz-img" class="rizz-img" />
         <ul>
           <li>
             <a href="https://instagram.com/rizz.sanw"
